공유 기능 추가

--- a/EgenManTetoGirl/Info.plist
+++ b/EgenManTetoGirl/Info.plist
@@ -203,6 +203,8 @@
 			<string>3qcr597p9d.skadnetwork</string>
 		</dict>
 	</array>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>결과 이미지를 사진 앨범에 저장하려면 접근 권한이 필요합니다.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
